# xcontest_pilot_feed

./: .gitignore  Cargo.toml  LICENSE  config.yml  readme.md
src/: flight_rss.rs  main.rs  pilot.rs
