[package]
name = "xcontest_pilot_feed"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
thiserror = "1.0"
regex = "1.10"
serde_json = "1.0.141"
iso8601-duration = "0.2.0"
humantime = "2.2.0"
rss = { version = "2.0.12", features = ["atom"] }
chrono = "0.4.41"
